# mobile_robotics_project

./: CMakeLists.txt  README.md  package.xml  requirements.txt
config/: hector_neural_mpc_config.yaml
gazebo/: paper_corridor.world
launch/: mpc_neural.launch
scripts/: improved_image_processing.py  mpc_neural_controller.py  mpc_optimizer.py  neural_models.py  transform_utils.py
