<?xml version="1.0"?>
<package format="2">
  <name>mobile_robotics_project</name>
  <version>0.0.0</version>
  <description>Collision prediction using NMPC</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
</package>
